--- a/big-market-trigger/pom.xml
+++ b/big-market-trigger/pom.xml
@@ -36,6 +36,16 @@
             <groupId>cn.coudou</groupId>
             <artifactId>big-market-domain</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.coudou</groupId>
+            <artifactId>big-market-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.coudou</groupId>
+            <artifactId>big-market-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
