--- a/big-market-app/src/main/resources/application-dev.yml
+++ b/big-market-app/src/main/resources/application-dev.yml
@@ -118,6 +118,29 @@ redis:
       ping-interval: 60000
       keep-alive: true
 
+dubbo:
+  application:
+    name: big-market
+    version: 1.0
+  registry:
+    id: nacos-registry
+    address: nacos://192.168.48.128:8848
+  protocol:
+    name: dubbo
+    port: -1
+  scan:
+    base-packages: cn.bugstack.trigger.api
+
+zookeeper:
+  sdk:
+    config:
+      connect-string: 192.168.48.128:2181
+      base-sleep-time-ms: 1000
+      max-retries: 3
+      session-timeout-ms: 18000
+      connection-timeout-ms: 30000
+
+
 # 日志
 logging:
   level:
